# nevil_sbc

./: .gitignore  .gitmodules
docs/: resources.md
hardware/nevil_sbc_rev0/: #auto_saved_files#  fp-info-cache  fp-lib-table  io.kicad_sch  io.kicad_sch-bak  nevil_sbc_rev0.kicad_pcb  nevil_sbc_rev0.kicad_prl  nevil_sbc_rev0.kicad_pro  nevil_sbc_rev0.kicad_sch  nevil_sbc_rev0.kicad_sch-bak  peripherals.kicad_sch  sym-lib-table
hardware/nevil_sbc_rev0/nevil-sbc-gerbers/: nevil_sbc_rev0-B_Cu.gbl  nevil_sbc_rev0-B_Mask.gbs  nevil_sbc_rev0-B_Paste.gbp  nevil_sbc_rev0-B_Silkscreen.gbo  nevil_sbc_rev0-Edge_Cuts.gm1  nevil_sbc_rev0-F_Cu.gtl  nevil_sbc_rev0-F_Mask.gts  nevil_sbc_rev0-F_Paste.gtp  nevil_sbc_rev0-F_Silkscreen.gto  nevil_sbc_rev0-NPTH.drl  nevil_sbc_rev0-PTH.drl
pico_vga/: Bugs.txt  CMakeLists.txt  NOTES.md
pico_vga/src/: CMakeLists.txt  buffers.c  buffers.h  bus.c  bus.h  bus.pio  config.h  main.c  render.c  render_text.c  test_screen.c  test_screen.h  vga.c  vga.h
